--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
           <a href="#ford">Ford</a>
           <a href="#toyota">Toyota</a>
           <a href="#bmw">BMW</a>
+          <a href="#table">Table</a>
+          <a href="form.html">Form</a>
         </nav>
         <a href="index.html" class="logo"
           ><img src="/img/logo.jpg" alt="Logo"
@@ -42,8 +44,8 @@
           </section>
           <section class="car">
             <div class="car_item">
-              <h3>E-Transit SuperVan 4.2</h3>
-              <img src="/img/f1.jpg" alt="Ford Model T" />
+              <h3>SuperVan 4.2</h3>
+              <img src="/img/f1.jpg" alt="SuperVan 4.2" />
 
               <p>
                 The SuperVan 4.2 is a wild hillclimb monster that blends 1,400
@@ -130,7 +132,7 @@
             </div>
             <div class="car_item">
               <h3>Toyota Crown</h3>
-              <img src="/img/t2.jpg" alt="Toyota" />
+              <img src="/img/t2.jpg" alt="Toyota Crown" />
 
               <p>
                 Toyota Crown (Toyota Crown) is an all-wheel drive cross-sedan of
@@ -261,6 +263,81 @@
           </section>
         </article>
       </main>
+      <div id="table" class="wrapper-table">
+        <table>
+          <caption>
+            Table#2 Cars info
+          </caption>
+          <thead>
+            <tr>
+              <th rowspan="2">Brand</th>
+              <th rowspan="2">Model</th>
+              <th rowspan="2">Country</th>
+              <th colspan="2">Weitght kg</th>
+              <th rowspan="2">Max speed</th>
+              <th rowspan="2">Realise year</th>
+            </tr>
+            <tr>
+              <th>empty</th>
+              <th>full</th>
+            </tr>
+          </thead>
+
+          <tbody>
+            <tr>
+              <th rowspan="2">Ford</th>
+              <th colspan="1">Mondeo 4</th>
+              <th colspan="1">USA</th>
+              <th colspan="1">1597</th>
+              <th>2300</th>
+              <th>200</th>
+              <th>2010</th>
+            </tr>
+            <tr>
+              <th>Fiesta 1.0</th>
+              <th>USA</th>
+              <th>1050</th>
+              <th>1200</th>
+              <th>165</th>
+              <th>2015</th>
+            </tr>
+            <tr>
+              <th rowspan="2">Toyota</th>
+              <th colspan="1">RAV 4</th>
+              <th colspan="1">Japan</th>
+              <th colspan="1">1550</th>
+              <th>2050</th>
+              <th>190</th>
+              <th>2015</th>
+            </tr>
+            <tr>
+              <th>Camry</th>
+              <th>Japan</th>
+              <th>1560</th>
+              <th>2050</th>
+              <th>190</th>
+              <th>2018</th>
+            </tr>
+            <tr>
+              <th rowspan="2">BMW</th>
+              <th colspan="1">X5</th>
+              <th colspan="1">Gemeny</th>
+              <th colspan="1">1560</th>
+              <th>2090</th>
+              <th>245</th>
+              <th>2020</th>
+            </tr>
+            <tr>
+              <th>i4</th>
+              <th>Gemeny</th>
+              <th>2100</th>
+              <th>22300</th>
+              <th>225</th>
+              <th>2022</th>
+            </tr>
+          </tbody>
+        </table>
+      </div>
 
       <a href="#" class="arrow-down">
         <span></span>
