--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
       href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,400&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
+ 
   </head>
   <body>
     <div class="wrapper">
@@ -27,8 +28,8 @@
       <main class="main">
         <h1>Made for succes</h1>
         <article id="ford">
-          <div class="car_header">
-            <img src="/img/ford_logo.png" alt="" />
+          <div class="car-header">
+            <img src="/img/ford-logo.png" alt="" />
             <h2>Ford heritage vault</h2>
           </div>
           <section class="history">
@@ -43,7 +44,7 @@
             </p>
           </section>
           <section class="car">
-            <div class="car_item">
+            <div class="car-item">
               <h3>SuperVan 4.2</h3>
               <img src="/img/f1.jpg" alt="SuperVan 4.2" />
 
@@ -56,7 +57,7 @@
                 of Speed 2022.
               </p>
             </div>
-            <div class="car_item">
+            <div class="car-item">
               <h3>Ford Explorer</h3>
               <img src="/img/f2.jpg" alt="Ford Explorer" />
 
@@ -69,8 +70,8 @@
               </p>
             </div>
           </section>
-          <section class="car_review">
-            <div class="car_revier-item">
+          <section class="car-review">
+            <div class="car-revier-item">
               <img src="/img/f3.jpg" alt="Ford" />
 
               <div class="review">
@@ -83,7 +84,7 @@
                 </p>
               </div>
             </div>
-            <div class="car_revier-item">
+            <div class="car-revier-item">
               <img src="/img/f4.jpg" alt="Ford" />
 
               <div class="review">
@@ -102,8 +103,8 @@
           </section>
         </article>
         <article id="toyota">
-          <div class="car_header">
-            <img src="/img/toyota_logo.png" alt="" />
+          <div class="car-header">
+            <img src="/img/toyota-logo.png" alt="" />
             <h2>Toyota</h2>
           </div>
           <section class="history">
@@ -117,7 +118,7 @@
             </p>
           </section>
           <section class="car">
-            <div class="car_item">
+            <div class="car-item">
               <h3>Toyota Corolla</h3>
               <img src="/img/f1.jpg" alt="Toyota Corolla" />
 
@@ -130,7 +131,7 @@
                 and design that meets the high class
               </p>
             </div>
-            <div class="car_item">
+            <div class="car-item">
               <h3>Toyota Crown</h3>
               <img src="/img/t2.jpg" alt="Toyota Crown" />
 
@@ -145,8 +146,8 @@
               </p>
             </div>
           </section>
-          <section class="car_review">
-            <div class="car_revier-item">
+          <section class="car-review">
+            <div class="car-revier-item">
               <img src="/img/t3.jpg" alt="Ford" />
 
               <div class="review">
@@ -164,7 +165,7 @@
                 </p>
               </div>
             </div>
-            <div class="car_revier-item">
+            <div class="car-revier-item">
               <img src="/img/f4.jpg" alt="Toyota RAV4" />
 
               <div class="review">
@@ -184,8 +185,8 @@
           </section>
         </article>
         <article id="bmw">
-          <div class="car_header">
-            <img src="/img/bmv_logo.png" alt="" />
+          <div class="car-header">
+            <img src="/img/bmv-logo.png" alt="" />
             <h2>BMW</h2>
           </div>
           <section class="history">
@@ -199,7 +200,7 @@
             </p>
           </section>
           <section class="car">
-            <div class="car_item">
+            <div class="car-item">
               <h3>BMW M3 Sedan</h3>
               <img src="/img/b1.jpg" alt="BMW" />
 
@@ -211,7 +212,7 @@
                 systems. Output is 480 hp (6,250 rpm) and 550 Nm
               </p>
             </div>
-            <div class="car_item">
+            <div class="car-item">
               <h3>BMW 8 Series Cabrio</h3>
               <img src="/img/b2.jpg" alt="BMW" />
 
@@ -226,8 +227,8 @@
               </p>
             </div>
           </section>
-          <section class="car_review">
-            <div class="car_revier-item">
+          <section class="car-review">
+            <div class="car-revier-item">
               <img src="/img/b3.jpg" alt="bmw" />
 
               <div class="review">
@@ -243,7 +244,7 @@
                 </p>
               </div>
             </div>
-            <div class="car_revier-item">
+            <div class="car-revier-item">
               <img src="/img/b4.jpg" alt="BMW 3 Series" />
 
               <div class="review">
@@ -262,82 +263,82 @@
             </div>
           </section>
         </article>
-      </main>
-      <div id="table" class="wrapper-table">
-        <table>
-          <caption>
-            Table#2 Cars info
-          </caption>
-          <thead>
-            <tr>
-              <th rowspan="2">Brand</th>
-              <th rowspan="2">Model</th>
-              <th rowspan="2">Country</th>
-              <th colspan="2">Weitght kg</th>
-              <th rowspan="2">Max speed</th>
-              <th rowspan="2">Realise year</th>
-            </tr>
-            <tr>
-              <th>empty</th>
-              <th>full</th>
-            </tr>
-          </thead>
+        <div id="table" class="wrapper-table">
+          <table>
+            <caption>
+              Table#2 Cars info
+            </caption>
+            <thead>
+              <tr>
+                <th rowspan="2">Brand</th>
+                <th rowspan="2">Model</th>
+                <th rowspan="2">Country</th>
+                <th colspan="2">Weitght kg</th>
+                <th rowspan="2">Max speed</th>
+                <th rowspan="2">Realise year</th>
+              </tr>
+              <tr>
+                <th>empty</th>
+                <th>full</th>
+              </tr>
+            </thead>
 
-          <tbody>
-            <tr>
-              <th rowspan="2">Ford</th>
-              <th colspan="1">Mondeo 4</th>
-              <th colspan="1">USA</th>
-              <th colspan="1">1597</th>
-              <th>2300</th>
-              <th>200</th>
-              <th>2010</th>
-            </tr>
-            <tr>
-              <th>Fiesta 1.0</th>
-              <th>USA</th>
-              <th>1050</th>
-              <th>1200</th>
-              <th>165</th>
-              <th>2015</th>
-            </tr>
-            <tr>
-              <th rowspan="2">Toyota</th>
-              <th colspan="1">RAV 4</th>
-              <th colspan="1">Japan</th>
-              <th colspan="1">1550</th>
-              <th>2050</th>
-              <th>190</th>
-              <th>2015</th>
-            </tr>
-            <tr>
-              <th>Camry</th>
-              <th>Japan</th>
-              <th>1560</th>
-              <th>2050</th>
-              <th>190</th>
-              <th>2018</th>
-            </tr>
-            <tr>
-              <th rowspan="2">BMW</th>
-              <th colspan="1">X5</th>
-              <th colspan="1">Gemeny</th>
-              <th colspan="1">1560</th>
-              <th>2090</th>
-              <th>245</th>
-              <th>2020</th>
-            </tr>
-            <tr>
-              <th>i4</th>
-              <th>Gemeny</th>
-              <th>2100</th>
-              <th>22300</th>
-              <th>225</th>
-              <th>2022</th>
-            </tr>
-          </tbody>
-        </table>
-      </div>
+            <tbody>
+              <tr>
+                <td rowspan="2">Ford</td>
+                <td colspan="1">Mondeo 4</td>
+                <td colspan="1">USA</td>
+                <td colspan="1">1597</td>
+                <td>2300</td>
+                <td>200</td>
+                <td>2010</td>
+              </tr>
+              <tr>
+                <td>Fiesta 1.0</td>
+                <td>USA</td>
+                <td>1050</td>
+                <td>1200</td>
+                <td>165</td>
+                <td>2015</td>
+              </tr>
+              <tr>
+                <td rowspan="2">Toyota</td>
+                <td colspan="1">RAV 4</td>
+                <td colspan="1">Japan</td>
+                <td colspan="1">1550</td>
+                <td>2050</td>
+                <td>190</td>
+                <td>2015</td>
+              </tr>
+              <tr>
+                <td>Camry</td>
+                <td>Japan</td>
+                <td>1560</td>
+                <td>2050</td>
+                <td>190</td>
+                <td>2018</td>
+              </tr>
+              <tr>
+                <td rowspan="2">BMW</td>
+                <td colspan="1">X5</td>
+                <td colspan="1">Gemeny</td>
+                <td colspan="1">1560</td>
+                <td>2090</td>
+                <td>245</td>
+                <td>2020</td>
+              </tr>
+              <tr>
+                <td>i4</td>
+                <td>Gemeny</td>
+                <td>2100</td>
+                <td>22300</td>
+                <td>225</td>
+                <td>2022</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </main>
 
       <a href="#" class="arrow-down">
         <span></span>
@@ -346,18 +347,18 @@
       </a>
 
       <footer class="footer">
-        <div class="footer_col">
+        <div class="footer-col">
           You may also want to visit us:<br />
           Mozilla Foundation<br />
           331 E Evelyn Ave<br />
           Mountain View, CA 94041<br />
           USA
         </div>
-        <div class="footer_col">
+        <div class="footer-col">
           <a href="mailto:jim@example.com">jim@example.com</a><br />
           <a href="tel:+14155550132">+38 (067) 555‑0132</a>
         </div>
-        <div class="footer_col">
+        <div class="footer-col">
           You can contact at <br /><a href="#">www.shop.com</a>
         </div>
       </footer>
